--- a/projetos/projetos.css
+++ b/projetos/projetos.css
@@ -6,7 +6,8 @@ body{
 }
 
 .project-home{
-    width: 50%;
+    width: 100%;
+    max-width: 600px;
     margin: auto;
     background-color: #230c20;
     color: white;
@@ -24,7 +25,8 @@ body{
 }
 
 .project-home span{
-    margin: 10px auto 0;
+    margin: 10px 5px 0;
+    text-align: center;
 }
 
 .project-home__links{
