--- a/sobre/sobre.css
+++ b/sobre/sobre.css
@@ -8,7 +8,8 @@ body{
 
 .section-sobre{
     background-color: #230c20;
-    width: 50%;
+    width: 90%;
+    max-width: 600px;
     margin: 100px auto;
     color: white;
     text-align: center;
